feat: add development environment

--- a/src/components/GoalCard.astro
+++ b/src/components/GoalCard.astro
@@ -4,7 +4,7 @@ const { text } = Astro.props;
 ---
 
 <div class="d-flex flex-row wrapperGoalCard">
-  <img src={icon} alt=`${icon}` />
+  <img alt=`${icon}` src={icon} />
   <p>{text}</p>
 </div>
 
