--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -50,11 +50,11 @@ import pyIco from "../../public/icons/python.png?url";
       class="d-flex justify-content-center align-items-center header-img-container"
     >
       <img
-        class="img-fluid"
-        src={laptopHome}
         alt="Laptop App Display"
-        width="700px"
+        class="img-fluid"
         height="314px"
+        src={laptopHome}
+        width="700px"
       />
     </div>
   </div>
@@ -62,7 +62,7 @@ import pyIco from "../../public/icons/python.png?url";
   <div
     class="d-flex justify-content-center align-items-center m-4 header-image-container-phone"
   >
-    <img class="img-fluid" src={laptopHome} alt="Laptop App Display" />
+    <img alt="Laptop App Display" class="img-fluid" src={laptopHome} />
   </div>
 
   <div
@@ -73,74 +73,74 @@ import pyIco from "../../public/icons/python.png?url";
       style="padding: 1%;border-bottom: 1px solid var(--app-logo-color)"
     >
       <img
-        class="tech-ico"
-        src={reactIco}
         alt="react icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={reactIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={tsIco}
         alt="typescript icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={tsIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={electronIco}
         alt=" electron icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={electronIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={mongoIco}
         alt=" mongodb icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={mongoIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={cssIco}
         alt="css icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={cssIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={pyIco}
         alt="python icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={pyIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={fastApiIco}
         alt="fast api icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={fastApiIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={boostrapIco}
         alt="boostrap icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={boostrapIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={miuIco}
         alt="material ui icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={miuIco}
+        width="32px"
       />
       <img
-        class="tech-ico"
-        src={gaIco}
         alt="github actions icon"
-        width="32px"
+        class="tech-ico"
         height="32px"
+        src={gaIco}
+        width="32px"
       />
     </div>
   </div>
