--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -10,22 +10,22 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
       <div class="container">
         <a class="navbar-brand" href="#">
           <img
-            src={spotifyElectronLogo}
             alt="SpotifyElectronLogo"
-            width="30"
             height="30"
+            src={spotifyElectronLogo}
+            width="30"
           />
         </a>
       </div>
     </nav>
     <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent"
       aria-expanded="false"
       aria-label="Toggle navigation"
+      class="navbar-toggler"
+      data-bs-target="#navbarSupportedContent"
+      data-bs-toggle="collapse"
+      type="button"
     >
       <span class="navbar-toggler-icon"> </span>
     </button>
@@ -37,18 +37,18 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#theapp"
+          <a aria-current="page" class="nav-link active" href="#theapp"
             >The App</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#goals">Goals</a>
+          <a aria-current="page" class="nav-link active" href="#goals">Goals</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#tech">Tech</a>
+          <a aria-current="page" class="nav-link active" href="#tech">Tech</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#architecture"
+          <a aria-current="page" class="nav-link active" href="#architecture"
             >Architecture</a
           >
         </li>
@@ -62,17 +62,17 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           href="https://github.com/AntonioMrtz/SpotifyElectron"
         >
           <img
+            alt="Antonio Martinez Photo Icon"
             class="img-fluid"
             src={githubIcon}
-            alt="Antonio Martinez Photo Icon"
             style="border-radius: 999px; width: 42px; height: 42px;"
           />
         </a>
         <a class="navbar-item-right" href="https://github.com/AntonioMrtz/">
           <img
+            alt="Github Icon"
             class="img-fluid"
             src={antonioMrtzIcon}
-            alt="Github Icon"
             style="border-radius: 999px; width: 38px; height: 38px;"
           />
         </a>
@@ -87,9 +87,9 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           href="https://github.com/AntonioMrtz/SpotifyElectron"
         >
           <img
+            alt="Antonio Martinez Photo Icon"
             class="img-fluid"
             src={githubIcon}
-            alt="Antonio Martinez Photo Icon"
             style="border-radius: 999px; width: 42px; height: 42px;"
           />
           <span>Repository</span>
@@ -99,9 +99,9 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           href="https://github.com/AntonioMrtz/"
         >
           <img
+            alt="Github Icon"
             class="img-fluid"
             src={antonioMrtzIcon}
-            alt="Github Icon"
             style="border-radius: 999px; width: 38px; height: 38px;"
           />
           <span>AntonioMrtz</span>
