--- a/src/components/StickyButton.astro
+++ b/src/components/StickyButton.astro
@@ -1,17 +1,17 @@
 <a href="#" id="sticky-button">
   <svg
-    xmlns="http://www.w3.org/2000/svg"
-    width="35px"
     height="35px"
     viewBox="0 0 20 20"
+    width="35px"
+    xmlns="http://www.w3.org/2000/svg"
   >
     <path
-      id="my-svg-path"
       d="M4.16732 12.5L10.0007 6.66667L15.834 12.5"
+      id="my-svg-path"
       stroke="rgb(154, 217, 234)"
-      stroke-width="2"
       stroke-linecap="round"
-      stroke-linejoin="round"></path>
+      stroke-linejoin="round"
+      stroke-width="2"></path>
   </svg>
 </a>
 
@@ -32,6 +32,7 @@
     border: 1px solid var(--app-logo-color);
   }
 
+  // eslint-disable-next-line astro/no-unused-css-selector
   .scroll {
     visibility: visible !important;
     z-index: 1000;
@@ -52,6 +53,7 @@
   const el = document.getElementById("home");
   const sticky_1 = document.getElementById("sticky-button");
   const observer = new IntersectionObserver((entries) => {
+    if (!sticky_1) return;
     if (entries[0].isIntersecting) {
       sticky_1.classList.remove("scroll");
     } else {
@@ -60,5 +62,7 @@
     }
   });
 
-  observer.observe(el); // Asynchronous call
+  if (el) {
+    observer.observe(el); // Asynchronous call
+  }
 </script>
