--- a/src/components/TechCard.astro
+++ b/src/components/TechCard.astro
@@ -7,7 +7,7 @@ const { link } = Astro.props;
 
 <a class="tech-card" href={link}>
   <div class="img-wrapper">
-    <img src={icon} alt=`${title} icon` />
+    <img alt=`${title} icon` src={icon} />
   </div>
 
   <div class="header-wrapper">
