--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,47 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta
-      name="description"
       content="Landing page of music streaming app Spotify Electron"
+      name="description"
     />
-    <meta name="viewport" content="width=device-width" />
+    <meta content="width=device-width" name="viewport" />
     <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-      crossorigin="anonymous"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
+      defer
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    ></script>
+    <link
+      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      rel="stylesheet"
     />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <meta
-      name="description"
       content="Spotify Electron>: open-source cross-platform music streaming app"
+      name="description"
     />
     <meta
-      name="keywords"
       content="Spotify,spotify,SpotifyElectron,Spotify Electron,AntonioMrtz,streaming,music"
+      name="keywords"
     />
-    <meta name="author" content="Antonio Martínez Fernández" />
+    <meta content="Antonio Martínez Fernández" name="author" />
     <meta
+      content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
       property="og:image"
-      content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
     />
     <meta
-      property="og:image:secure_url"
       content="https://raw.githubusercontent.com/AntonioMrtz/SpotifyElectron_Web/main/public/icons/SpotifyElectronLogo.png"
+      property="og:image:secure_url"
     />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="400" />
-    <meta property="og:image:height" content="300" />
+    <meta content="image/png" property="og:image:type" />
+    <meta content="400" property="og:image:width" />
+    <meta content="300" property="og:image:height" />
     <title>
       Spotify Electron: open-source cross-platform music streaming app
     </title>
-    <link rel="icon" href="icons/SpotifyElectronLogo.png" />
+    <link href="icons/SpotifyElectronLogo.png" rel="icon" />
   </head>
   <body>
     <slot />
