feat: add development environment

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,6 +46,7 @@
       Spotify Electron: open-source cross-platform music streaming app
     </title>
     <link href="icons/SpotifyElectronLogo.png" rel="icon" />
+    <link href="/sitemap-index.xml" rel="sitemap" />
   </head>
   <body>
     <slot />
