--- a/src/components/TheApp.astro
+++ b/src/components/TheApp.astro
@@ -6,172 +6,179 @@ import explorar from "../../public/walkthrough/Explorar.webp?url";
 ---
 
 <div class="theapp-section section-left">
-    <img class="img-fluid" src={home} alt="Home screenshot" />
+  <img alt="Home screenshot" class="img-fluid" src={home} />
 
-    <div class="theapp-section-header">
-        <h3 class="reveal">Explore the best artists and music</h3>
-        <p>
-            All of your favourites artists and songs are now in SpotifyElectron. Lets dig in and find all the new features.
-        </p>
-    </div>
+  <div class="theapp-section-header">
+    <h3 class="reveal">Explore the best artists and music</h3>
+    <p>
+      All of your favourites artists and songs are now in SpotifyElectron. Lets
+      dig in and find all the new features.
+    </p>
+  </div>
 </div>
 <div class="theapp-section section-right">
-    <div class="theapp-section-header">
-        <h3 class="reveal">Organize your favorite music in playlists</h3>
-        <p>
-            Save your songs into playlist and access them from wherever and
-            whenever you want. Access your friend's playlists for sharing and discovering new
-            music.
-        </p>
-    </div>
+  <div class="theapp-section-header">
+    <h3 class="reveal">Organize your favorite music in playlists</h3>
+    <p>
+      Save your songs into playlist and access them from wherever and whenever
+      you want. Access your friend's playlists for sharing and discovering new
+      music.
+    </p>
+  </div>
 
-    <img class="img-fluid" src={playlist} alt="Playlist screenshot" />
+  <img alt="Playlist screenshot" class="img-fluid" src={playlist} />
 </div>
 
 <div class="theapp-section section-left">
-    <img class="img-fluid" src={uploadSong} alt="Upload song screenshot" />
+  <img alt="Upload song screenshot" class="img-fluid" src={uploadSong} />
 
-    <div class="theapp-section-header">
-        <h3 class="reveal">Upload your songs</h3>
-        <p>Have you ever missed not finding a not so popular song in other streaming services? That's not the 
-            problem from now on, SpotifyElectron allows users to upload their own music and share them globally.
-        </p>
-    </div>
+  <div class="theapp-section-header">
+    <h3 class="reveal">Upload your songs</h3>
+    <p>
+      Have you ever missed not finding a not so popular song in other streaming
+      services? That's not the problem from now on, SpotifyElectron allows users
+      to upload their own music and share them globally.
+    </p>
+  </div>
 </div>
 
 <div class="theapp-section section-right">
-    <div class="theapp-section-header">
-        <h3 class="reveal">Discover and try the new interface</h3>
-        <p>Modern interface with the best user experience. Search by genre, find your favourite songs or see 
-            what your friends are playing : the limit it's up to you. 
+  <div class="theapp-section-header">
+    <h3 class="reveal">Discover and try the new interface</h3>
+    <p>
+      Modern interface with the best user experience. Search by genre, find your
+      favourite songs or see what your friends are playing : the limit it's up
+      to you.
+    </p>
+  </div>
 
-        </p>
-    </div>
-
-    <img class="img-fluid" src={explorar} alt="Explorar screenshot" />
+  <img alt="Explorar screenshot" class="img-fluid" src={explorar} />
 </div>
 
 <style>
+  .theapp-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 8rem;
+    padding: 0 1rem 0 1rem;
+  }
+
+  .theapp-section img {
+    width: 40svw;
+    border-radius: 8px;
+  }
+  .theapp-section-header {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .theapp-section-header h3 {
+    padding-bottom: 1%;
+    border-bottom: 2px solid var(--app-logo-color-darker);
+  }
+
+  .theapp-section-header h3::first-letter {
+    color: var(--app-logo-color-darker);
+  }
+
+  .theapp-section-header p {
+    color: var(--subheader-text);
+  }
+
+  .section-left img {
+    margin-right: 3rem;
+    filter: drop-shadow(-20px 15px 10px var(--secondary-color));
+  }
+
+  .section-right img {
+    margin-left: 3rem;
+    filter: drop-shadow(20px 15px 10px var(--secondary-color));
+  }
+
+  @media (max-width: 989px) {
     .theapp-section {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-        margin-bottom: 8rem;
-        padding: 0 1rem 0 1rem;
+      flex-direction: column;
+      padding: 0 2.5rem 0 2.5rem;
     }
-
     .theapp-section img {
-        width: 40svw;
-        border-radius: 8px;
-    }
-    .theapp-section-header {
-        display: flex;
-        flex-direction: column;
+      margin: 2rem 0 0 0 !important;
+      width: 80svw;
+      filter: drop-shadow(0px 0px 10px var(--secondary-color));
     }
 
-    .theapp-section-header h3 {
-        padding-bottom: 1%;
-        border-bottom: 2px solid var(--app-logo-color-darker);
+    .section-left .theapp-section-header {
+      order: 1;
     }
-
-    .theapp-section-header h3::first-letter {
-        color: var(--app-logo-color-darker);
-    }
-
-    .theapp-section-header p {
-        color: var(--subheader-text);
-    }
-
     .section-left img {
-        margin-right: 3rem;
-        filter: drop-shadow(-20px 15px 10px var(--secondary-color));
+      order: 2;
     }
+  }
 
-    .section-right img {
-        margin-left: 3rem;
-        filter: drop-shadow(20px 15px 10px var(--secondary-color));
+  /* Animation */
+
+  // eslint-disable-next-line astro/no-unused-css-selector
+  .swing-in-left-fwd {
+    -webkit-animation: swing-in-left-fwd 0.5s
+      cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+    animation: swing-in-left-fwd 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+      both;
+  }
+
+  @-webkit-keyframes swing-in-left-fwd {
+    // eslint-disable-next-line astro/no-unused-css-selector
+    0% {
+      -webkit-transform: rotateY(100deg);
+      transform: rotateY(100deg);
+      -webkit-transform-origin: left;
+      transform-origin: left;
+      opacity: 0;
     }
-
-    @media (max-width: 989px) {
-        .theapp-section {
-            flex-direction: column;
-            padding: 0 2.5rem 0 2.5rem;
-        }
-        .theapp-section img {
-            margin: 2rem 0 0 0 !important;
-            width: 80svw;
-            filter: drop-shadow(0px 0px 10px var(--secondary-color));
-        }
-
-        .section-left .theapp-section-header {
-            order: 1;
-        }
-        .section-left img {
-            order: 2;
-        }
+    // eslint-disable-next-line astro/no-unused-css-selector
+    100% {
+      -webkit-transform: rotateY(0);
+      transform: rotateY(0);
+      -webkit-transform-origin: left;
+      transform-origin: left;
+      opacity: 1;
     }
-
-    /* Animation */
-
-    .swing-in-left-fwd {
-        -webkit-animation: swing-in-left-fwd 0.5s
-            cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
-        animation: swing-in-left-fwd 0.5s
-            cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+  }
+  @keyframes swing-in-left-fwd {
+    0% {
+      -webkit-transform: rotateY(100deg);
+      transform: rotateY(100deg);
+      -webkit-transform-origin: left;
+      transform-origin: left;
+      opacity: 0;
     }
-
-    @-webkit-keyframes swing-in-left-fwd {
-        0% {
-            -webkit-transform: rotateY(100deg);
-            transform: rotateY(100deg);
-            -webkit-transform-origin: left;
-            transform-origin: left;
-            opacity: 0;
-        }
-        100% {
-            -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-            -webkit-transform-origin: left;
-            transform-origin: left;
-            opacity: 1;
-        }
+    100% {
+      -webkit-transform: rotateY(0);
+      transform: rotateY(0);
+      -webkit-transform-origin: left;
+      transform-origin: left;
+      opacity: 1;
     }
-    @keyframes swing-in-left-fwd {
-        0% {
-            -webkit-transform: rotateY(100deg);
-            transform: rotateY(100deg);
-            -webkit-transform-origin: left;
-            transform-origin: left;
-            opacity: 0;
-        }
-        100% {
-            -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-            -webkit-transform-origin: left;
-            transform-origin: left;
-            opacity: 1;
-        }
-    }
+  }
 </style>
 
 <script>
-    function reveal() {
-        var reveals = document.querySelectorAll(".reveal");
+  function reveal() {
+    var reveals = document.querySelectorAll(".reveal");
 
-        for (var i = 0; i < reveals.length; i++) {
-            var windowHeight = window.innerHeight;
-            var elementTop = reveals[i].getBoundingClientRect().top;
-            var elementVisible = 150;
+    for (var i = 0; i < reveals.length; i++) {
+      var windowHeight = window.innerHeight;
+      var elementTop = reveals[i].getBoundingClientRect().top;
+      var elementVisible = 150;
 
-            if (elementTop < windowHeight - elementVisible) {
-                reveals[i].classList.add("swing-in-left-fwd");
-            } else {
-                reveals[i].classList.remove("swing-in-left-fwd");
-            }
-        }
+      if (elementTop < windowHeight - elementVisible) {
+        reveals[i].classList.add("swing-in-left-fwd");
+      } else {
+        reveals[i].classList.remove("swing-in-left-fwd");
+      }
     }
+  }
 
-    window.addEventListener("scroll", reveal);
+  window.addEventListener("scroll", reveal);
 </script>
