--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -45,11 +45,13 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           <a aria-current="page" class="nav-link active" href="#goals">Goals</a>
         </li>
         <li class="nav-item">
-          <a aria-current="page" class="nav-link active" href="#tech">Tech</a>
+          <a aria-current="page" class="nav-link active" href="#tech-stack"
+            >Tech Stack</a
+          >
         </li>
         <li class="nav-item">
-          <a aria-current="page" class="nav-link active" href="#architecture"
-            >Architecture</a
+          <a aria-current="page" class="nav-link active" href="/docs/"
+            >Documention</a
           >
         </li>
       </ul>
