fix: navbar docs fix link

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -50,7 +50,7 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
           >
         </li>
         <li class="nav-item">
-          <a aria-current="page" class="nav-link active" href="/docs/"
+          <a aria-current="page" class="nav-link active" href="./docs/"
             >Documention</a
           >
         </li>
