fix: broken links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -24,10 +24,7 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
               >
             </li>
             <li>
-              <a
-                href="https://github.com/AntonioMrtz/SpotifyElectron/blob/master/.github/CONTRIBUTING.md"
-                >Contribute</a
-              >
+              <a href="./docs/CONTRIBUTING/">Contribute</a>
             </li>
             <li>
               <a
@@ -50,12 +47,8 @@ import antonioMrtzLogoIcon from "../../public/icons/logoAM.png?url";
             </li>
             <li>
               <a
-                href="https://www.linkedin.com/in/antonio-martinez-fern%C3%A1ndez-7b2a3224b/"
+                href="https://www.linkedin.com/in/antonio-martinez-fernandez-dev/"
                 >Linkedin</a
-              >
-            </li>
-            <li>
-              <a href="https://www.instagram.com/antonio_martin3z/">Instagram</a
               >
             </li>
           </ul>
